test/errors/type/str/search2.yasl
mt.lookup('', .search)(1, .true)
